Bug 364296 - Send certificate by mail: Wrong attachment path
Summary: Send certificate by mail: Wrong attachment path
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-14 07:16 UTC by Fabian Vogt
Modified: 2016-07-14 15:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2016-06-14 07:16:02 UTC
After creation of a key, kleopatra provides the option to send the certificate by mail as an attachment.
However, KMail interprets the path as URL and fails:

File or directory /home/fabian/%2Ftmp%2Fkleo-... not found.

As providing an attachment via kmails --attach option works fine, I guess this is a bug in Kleopatra.


Reproducible: Always
Comment 1 Laurent Montel 2016-06-14 11:22:01 UTC
Git commit 60dc0bc4d6449e384d88a8e398261e1bb98f0a04 by Montel Laurent.
Committed on 14/06/2016 at 11:20.
Pushed by mlaurent into branch 'Applications/16.04'.

Fix Bug 364296 - Send certificate by mail: Wrong attachment path

FIXED-IN: 16.04.3

M  +11   -7    src/newcertificatewizard/newcertificatewizard.cpp

http://commits.kde.org/kleopatra/60dc0bc4d6449e384d88a8e398261e1bb98f0a04
Comment 2 Andre Heinecke 2016-07-14 15:26:28 UTC
Git commit 72a2496f2f0215f736deef7f682da14ad812a47c by Andre Heinecke, on behalf of Montel Laurent.
Committed on 06/07/2016 at 10:13.
Pushed by aheinecke into branch 'sigencfiles-3'.

Fix Bug 364296 - Send certificate by mail: Wrong attachment path

FIXED-IN: 16.04.3

M  +11   -7    src/newcertificatewizard/newcertificatewizard.cpp

http://commits.kde.org/kleopatra/72a2496f2f0215f736deef7f682da14ad812a47c