Fix Bug 364296 - Send certificate by mail: Wrong attachment path

FIXED-IN: 16.04.3
BUG: 364296